round-2/search-embed.css
/* ... */
@media screen and (min-width: 992px) {
.contributors li:first-child:before {
    content: none;
}
.contributors li:before {
    content: "\2022";
    margin-right: .7em;
}
}

@media screen and (max-width: 767px) {

.contributors ul {
	margin-inline-start: 0px !important;
}

}


h1 span.stacked {
		                display: flex;
		                flex-direction: column-reverse;
		                margin-left: -9999px;
		}
		h1 span.stacked span:nth-child(1), h1 span.stacked span:nth-child(2) {
		                margin-left: 9999px;
		}
		h1 span.stacked span:nth-child(2) {
		                font-size: 0.8em;
		                color: #666;
										font-weight: 200;
										margin-bottom: 0.175em;
		}
		h1 span.stacked span:nth-child(1) {
		                margin-top: -1.1em;
		}


button#wb-srch-sub a:visited {

color: white !important;


}


button#wb-srch-sub a {

color: white !important;


}

@media (max-width:320px) {
.recall-date {
	float:left !important;
	/* font-weight: bold !important; */
}

.recall-title {
	width: 100% !important;
}

}

@media (max-width: 500px) {
	dl.inline-flex dt {
	  flex: 0 0 100%;
	  text-overflow: ellipsis;
	  overflow: hidden;
	}
	dl.inline-flex dd {
	  flex:0 0 100%;
	  margin-left: auto;
	  text-align: left;
	  text-overflow: ellipsis;
	  overflow: hidden;
	}
  #collapseOne {
    max-height: 260px;
    overflow: auto;
  }
  .wrap {
    overflow-x: scroll;
  }

  #searchResponse {
    clear: both !important;
  }

}




@media (min-width:768px) {

}

@media (max-width:440px) {
    .recall-share {
        margin-top: 10px;
        float: left!important;
    }
}.icon.twitter {
    background-size: 15px 15px !important;
}

